--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
+  <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
   <script src="libraries/p5.min.js"></script>
   <script src="libraries/p5.sound.min.js"></script>
 </head>
